--- a/composer.json
+++ b/composer.json
@@ -2,16 +2,23 @@
     "name": "laravel/laravel",
     "type": "project",
     "description": "The Laravel Framework.",
-    "keywords": ["framework", "laravel"],
+    "keywords": [
+        "framework",
+        "laravel"
+    ],
     "license": "MIT",
     "require": {
         "php": "^8.0",
+        "bacon/bacon-qr-code": "^2.0",
+        "endroid/qr-code": "^4.8",
+        "endroid/qrcode": "^1.1",
         "fruitcake/laravel-cors": "^2.0.5",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.0",
         "laravel/passport": "^11.8",
         "laravel/sanctum": "^2.14",
-        "laravel/tinker": "^2.7"
+        "laravel/tinker": "^2.7",
+        "picqer/php-barcode-generator": "^2.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
