--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^8.0",
         "bacon/bacon-qr-code": "^2.0",
         "endroid/qr-code": "^4.8",
+        "fruitcake/laravel-cors": "^3.0",
         "guzzlehttp/guzzle": "^7.2",
         "intervention/image": "^2.7",
         "laravel/framework": "^9.0",
